# jeryu-deploy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  VERSION  ci-fast-push.sh  jeryu-split.lock.toml  repos.manifest.toml
.github/workflows/: ci-fast.yml  ci.yml  jankurai.yml  proof-evidence.yml  release.yml  security.yml  web.yml
agent/: JANKURAI_STANDARD.md  audit-policy.toml  boundaries.toml  ci-lanes.toml  coverage-sources.toml  exceptions.toml  native-cli-manifest.toml  owner-map.json  standard-version.toml  test-map.json  ux-qa.toml  vibe-coverage.toml
agent/baselines/: README.md
agent/baselines/historical/jankurai-1.6.10/: main.repo-score.json
config/: jeryu-cache-policy.toml  trust-tiers.toml
configs/: gitd.example.conf  runnerd.toml  signrail.example.toml
crates/jeryu-api/: AGENTS.md  API_SURFACE.md  Cargo.toml  build.rs
crates/jeryu-api/src/: autonomy_bridge.rs  ci_bridge.rs  git_materializer.rs  git_transport.rs  github_mirror.rs  lib.rs  main.rs  read_model.rs  routes.rs  web.rs
crates/jeryu-api/src/ci_bridge/: tests.rs
crates/jeryu-api/src/github/: actions.rs  branch_protection.rs  check_runs.rs  commit_status.rs  graphql.rs  hooks.rs  issues.rs  mod.rs  pulls.rs  releases.rs  repos.rs  support.rs
crates/jeryu-api/src/web/: agent_runs.rs  agent_runs_tests.rs  auth.rs  ci_evidence.rs  codegraph.rs  control_plane.rs  ecosystem.rs  embedded_web.rs  markdown.rs  mcp_backend.rs  permissions.rs  pulls.rs  repo_admin.rs  repositories.rs  sessions.rs  surface.rs  tests.rs  tool_build.rs  tool_finder.rs  tool_registry.rs  tool_status_messages.rs  work.rs  workcell_surface_tests.rs  workcells.rs  workcells_support.rs  ws.rs
crates/jeryu-api/src/web/control_plane/: checks.rs  graph.rs  handlers.rs  mcp.rs  model.rs  priorities.rs  runner.rs  tests.rs  types.rs
crates/jeryu-api/src/web/sessions/: tests.rs
crates/jeryu-api/src/web/workcells/: run_agent.rs
crates/jeryu-api/tests/: github_api.rs  merge_gating.rs  routes.rs  spine_live_http.rs
crates/jeryu-cli/: Cargo.toml
crates/jeryu-cli/src/: artifact_support.rs  dispatch.rs  lib.rs  main.rs  release_smoke.rs
crates/jeryu-cli/src/cli/: agent.rs  ci.rs  control_plane.rs  forge.rs  mod.rs  operator.rs  proof.rs  runner.rs
crates/jeryu-cli/src/client/: agent.rs  cache.rs  ci.rs  forge.rs  inmemory.rs  mod.rs  proof.rs  release.rs  runner.rs
crates/jeryu-cli/src/commands/: agent.rs  api.rs  autonomy.rs  cache.rs  ci.rs  control_plane.rs  forge.rs  gh_setup.rs  mod.rs  onboard.rs  proof.rs  release.rs  runner.rs
crates/jeryu-cli/tests/: cli_snapshots.rs
docs/: AGENTS.md  FILE_TREE.md  MIGRATION_WEBHOOKS_AND_APPS.md  PHASE11_SCOPE.md  PHASE12_SPEC.md  PHASE2_IMPLEMENTATION_NOTES.md  RUNBOOKS.md  agent-native-standard.md  architecture.md  audit-rubric.md  boundaries.md  engineering_spec.md  errors.md  generated-zones.md  jeryu-mirror-offline-bundle.md  phase1-file-tree.md  phase10-enterprise-hardening.md  phase6.md  phase7-api.md  phase7-architecture.md  phase7-validation.md  phase8-file-tree.md  release-process.md  release.md  signrail-release-signing.md  signrail-threat-model.md  testing.md  workcell.md
examples/: cache-key-material.json  fork-pr-write-request.json  t1-green-write-request.json
examples/jobs/: denied-native-hot-fork.job  oci-compat.job  t1-native-clean.job  t1-native-hot.job  t4-fork-pr.job
images/agent-sandbox/: Dockerfile  PUBLISH.md  README.md  jankurai-installation-receipt.json
images/agent-sandbox/seccomp/: oci-docker-phase4-seccomp.json
ops/: AGENTS.md  decommission-retired-forge.sh
ops/agent-sandbox/: smoke.sh
ops/bench/: run-phase10-scorecard.sh  run-provider-comparison.sh
ops/chaos/: db-failover.sh  object-store-latency.sh
ops/ci/: artifact_support.sh  audit.sh  cache-tools.sh  check.sh  ci-env.sh  ci-fast.sh  common.sh  coverage-baseline.tsv  coverage.sh  coverage_ratchet.sh  full.sh  jankurai.sh  lib.sh  pr-ci.sh  proof-evidence.sh  publish-readme-score.sh  quality-gates.sh  release.sh  release_smoke.sh  sbom-provenance.sh  score.sh  security-tools.sh  shard.sh  test-governed-jankurai.sh  verify-jeryu-env.sh  web.sh  workflow-lint.sh
ops/ci/gates/: README.md  agent-substrate.sh  cache-safety.sh  coverage.sh  foundation.sh  git-oracle.sh  github-conformance.sh  ir-determinism.sh  proof-gate.sh  runner-sandbox.sh  workcells.sh
ops/deploy/: make-production-env.sh  sign-and-push-atomicsoul.sh  test-atomicsoul-release.sh
ops/forge/: registry-cleanup.sh
ops/git-hooks/: pre-push
ops/git-oracle/: README.md  run.sh
ops/jankurai/: backfill-repo-scores.sh
ops/security/: jeryu-runnerd.service  red-team.sh
ops/signrail-verify/: README.md  run.sh
ops/split/: fleet_ci.py  manifest.sh  product_pipeline.py  smoke_serve.sh  source_coverage.py  verify-lock.py
ops/upgrade/: rollback-drill.sh
policies/: cache-laws.toml  trust-tiers.toml
policies/cgroups/: microvm.conf  native-default.conf  native-hot.conf
policies/landlock/: agent-guard.rules  native-rust-clean.rules  native-rust-hot.rules
policies/seccomp/: agent-guard.policy  native-rust-clean.policy  native-rust-hot.policy  release-hermetic.policy
scripts/: check-agent-maps.sh  check-owner-test-map.sh  ci-doctor.sh  ci-phases.sh  emit-release-receipt.sh  render-policy-docs.sh  secret-scan.sh  stage-web-dist.sh  test-emit-release-receipt.sh  update-file-tree.sh  write-manifest.sh
tests/: README.md  cache_poisoning_matrix.sh  phase11_acceptance.md  sandbox_escape_matrix.sh
tests/fixtures/github/: 500_jobs.yml  matrix.yml  simple.yml
tests/fixtures/native/: ci.toml
tests/fixtures/phase11/: readiness.json  replay-claim.json  tenant-policy.json
