[package]
name = "jeryu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "jeryu"
path = "src/main.rs"

[lib]
name = "jeryu_cli"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
jeryu-api = { path = "../jeryu-api", features = ["web"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
